# oxidd-fork

./: Cargo.toml
crates/oxidd/: Cargo.toml
crates/oxidd-rules-qdd/: Cargo.toml
crates/oxidd-rules-qdd/src/: apply_rec_st.rs  lib.rs
crates/oxidd/src/: bdd.rs  lib.rs  qdd.rs
data/: qdd.dddmp
