[package]
name = "oxidd-rules-qdd"
version = "0.1.0"
edition = "2021"
description = "Quasi decision diagrams (QDDs) for OxiDD"
readme = "../../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
oxidd-core.workspace = true
oxidd-derive.workspace = true
oxidd-cache.workspace = true

# For implementing `DotStyle`
oxidd-dump = { workspace = true, features = ["dddmp", "dot"] }

# document feature flags
document-features = "0.2"

rustc-hash = "2.0.0" # fast hash function


[features]
default = []

## Enable multi-threaded apply implementations
multi-threading = []

## Enable statistics generation
statistics = []
